@@ -4,33 +4,27 @@ import BusinessLayer.Logger.SystemLogger;
 import Security.ProxyScurity;
 import Security.SecurityAdapter;
 import ServiceLayer.DTOs.*;
-
-
-import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-
-import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 
 public class Market {
-    private Map<Integer, Store> stores;
+    private final Map<Integer, Store> stores;
     private Map<String, SystemManager> systemManagers;
     private Map<String, Member> users;
     private MessageDigest passwordEncoder;
 
     private SecurityAdapter securityUtils = new ProxyScurity(null);
-    Object userLock = new Object();
+    final Object userLock = new Object();
 
 
     private SystemLogger logger;
     private boolean marketOpen;
 
-    public static Object purchaseLock = new Object();
+    public static final Object purchaseLock = new Object();
     FundDemander fd;
     SessionManager sessionManager = new SessionManager();
 
@@ -81,7 +75,7 @@ public class Market {
         systemManagers.put(username, sm);
         logger.info(String.format("new manager added to the system: %s", username));
         if (!marketOpen) {
-            logger.info(String.format("The Market now open"));
+            logger.info("The Market now open");
             marketOpen = true;
         }
 
@@ -146,15 +140,13 @@ public class Market {
                 boolean res = securityUtils.authenticate(username, password);
                 if (res) {
                     logger.info(String.format("%s the user passed authenticate check and logged in to the systemManager", username));
-                    String sessionId = sessionManager.createSessionForSystemManager(sm);
-                    logger.info(String.format("%s signed up to the system as a systemManager", username));
-                    return sessionId;
+                    return sessionManager.createSessionForSystemManager(sm);
                 }
                 return null;
             }
             isMarketOpen();
             // Retrieve the stored Member's object for the given username
-            Member member = null;
+            Member member;
             synchronized (username.intern()) {
                 member = users.get(username);
             }
@@ -170,9 +162,7 @@ public class Market {
             boolean res = securityUtils.authenticate(username, password);
             if (res) {
                 logger.info(String.format("%s passed authenticate check and logged in to the system", username));
-                String sessionId = sessionManager.createSession(member);
-                logger.info(String.format("%s signed up to the system as a member", username));
-                return sessionId;
+                return sessionManager.createSession(member);
             }
             logger.error(String.format("%s did not passed authenticate check and logged in to the system", username));
         }
@@ -185,7 +175,7 @@ public class Market {
         logger.info(String.format("%s try to logout from the system", sessionId));
         try {
             sessionManager.deleteSessionForSystemManager(sessionId);
-            logger.info(String.format("%s logged out of the system as systemManager", sessionId));
+            logger.info("logged out of the system");
         } catch (Exception e) {
             isMarketOpen();
             sessionManager.deleteSession(sessionId);
@@ -236,7 +226,7 @@ public class Market {
     public StoreDTO getStoreDTO(String sessionId, int storeId) throws Exception {
         isMarketOpen();
         logger.info(String.format("get the store with specific storeID : %d", storeId));
-        Guest g = sessionManager.getSession(sessionId);
+        sessionManager.getSession(sessionId);
         checkStoreExists(storeId);
         return new StoreDTO(stores.get(storeId));
     }
@@ -257,7 +247,7 @@ public class Market {
         List<Product> list = new ArrayList<>();
         logger.info(String.format("getting product by name : %s", productName));
         if (!stringIsEmpty(productName))
-            stores.values().forEach(s -> list.addAll(s.getProducts().keySet().stream().filter(p -> p.getProductName().equals(productName)).collect(Collectors.toList())));
+            stores.values().forEach(s -> list.addAll(s.getProducts().keySet().stream().filter(p -> p.getProductName().equals(productName)).toList()));
         g.setSearchResults(list);
         g.setSearchKeyword(productName);
         return list.stream().map(ProductDTO::new).toList();
@@ -270,7 +260,7 @@ public class Market {
         Guest g = sessionManager.getSession(sessionId);
         List<Product> list = new ArrayList<>();
         if (!stringIsEmpty(productCategory))
-            stores.values().forEach(s -> list.addAll(s.getProducts().keySet().stream().filter(p -> p.getCategory().equals(productCategory)).collect(Collectors.toList())));
+            stores.values().forEach(s -> list.addAll(s.getProducts().keySet().stream().filter(p -> p.getCategory().equals(productCategory)).toList()));
         g.setSearchResults(list);
         g.setSearchKeyword(productCategory);
         return list.stream().map(ProductDTO::new).toList();
@@ -283,7 +273,7 @@ public class Market {
         Guest g = sessionManager.getSession(sessionId);
         List<Product> list = new ArrayList<>();
         if (!stringIsEmpty(productSubstring))
-            stores.values().forEach(s -> list.addAll(s.getProducts().keySet().stream().filter(p -> p.getProductName().contains(productSubstring)).collect(Collectors.toList())));
+            stores.values().forEach(s -> list.addAll(s.getProducts().keySet().stream().filter(p -> p.getProductName().contains(productSubstring)).toList()));
         g.setSearchResults(list);
         g.setSearchKeyword(productSubstring);
         return list.stream().map(ProductDTO::new).toList();
@@ -317,7 +307,7 @@ public class Market {
     public void addProductToCart(String sessionId, int storeId, int productId, int quantity) throws Exception {
         isMarketOpen();
         Guest g = sessionManager.getSession(sessionId);
-        Store s = getStore(sessionId, storeId);
+        Store s = getStore(storeId);
         logger.info(String.format("adding product %d with the %d store with %d amount", productId, storeId, quantity));
         g.addProductToShoppingCart(s, productId, quantity);
     }
@@ -334,7 +324,7 @@ public class Market {
     public void changeProductQuantity(String sessionId, int storeId, int productId, int quantity) throws Exception {
         isMarketOpen();
         Guest g = sessionManager.getSession(sessionId);
-        Store s = getStore(sessionId, storeId);
+        Store s = getStore(storeId);
         logger.info(String.format("changing the %d product at %d store quantity to %d ", productId, storeId, quantity));
         g.changeProductQuantity(productId, quantity, s);
     }
@@ -343,7 +333,7 @@ public class Market {
     public void removeProductFromCart(String sessionId, int storeId, int productId) throws Exception {
         isMarketOpen();
         Guest g = sessionManager.getSession(sessionId);
-        Store s = getStore(sessionId, storeId);
+        Store s = getStore(storeId);
         logger.info(String.format("removing product %d and store %s from the cart", productId, storeId));
         g.removeProductFromShoppingCart(s, productId);
     }
@@ -380,7 +370,7 @@ public class Market {
         int storeId;
         synchronized (stores) {
             storeId = stores.keySet().stream().mapToInt(v -> v).max().orElse(0);
-            boolean isStoreExist = stores.values().stream().filter(x-> x.getStoreName() == storeName).toList().size() > 0;
+            boolean isStoreExist = stores.values().stream().filter(x-> Objects.equals(x.getStoreName(), storeName)).toList().size() > 0;
             if(!isStoreExist) {
                 stores.put(storeId, g.openStore(storeName, storeId));
             }
@@ -399,8 +389,8 @@ public class Market {
         isMarketOpen();
         sessionManager.getSession(sessionId);
         logger.info(String.format("trying to get all purchase history of store : %d", storeId));
-        if (!storeExists(storeId)) {
-            logger.error(String.format("this storeId %d is not existing", storeId));
+        if (storeExists(storeId)) {
+            logger.error(String.format("this store %d is not existing", storeId));
             throw new Exception("Store id doesn't exist");
         }
         Position p = checkPositionLegal(sessionId, storeId);
@@ -415,7 +405,7 @@ public class Market {
             sessionManager.getSession(sessionId);
             logger.info("trying adding new product");
             checkStoreExists(storeId);
-            logger.info(String.format("adding product to store %s new product name %s price %.02f category %s quantity %d description %s", getStore(sessionId, storeId).getStoreName(), productName, price, category, quantity, description));
+            logger.info(String.format("adding product to store %s new product name %s price %.02f category %s quantity %d description %s", getStore(storeId).getStoreName(), productName, price, category, quantity, description));
             p = checkPositionLegal(sessionId, storeId);
         }
         return new ProductDTO(p.addProduct(stores.get(storeId), productName, price, category, quantity, description));
@@ -427,7 +417,7 @@ public class Market {
         sessionManager.getSession(sessionId);
         logger.info("trying to edit product name");
         checkStoreExists(storeId);
-        logger.info(String.format("edit product name %d to %s in store %s", productId, newName, getStore(sessionId, storeId).getStoreName()));
+        logger.info(String.format("edit product name %d to %s in store %s", productId, newName, getStore(storeId).getStoreName()));
         Position p = checkPositionLegal(sessionId, storeId);
         p.editProductName(productId, newName);
     }
@@ -438,7 +428,7 @@ public class Market {
         sessionManager.getSession(sessionId);
         logger.info("trying to edit product price");
         checkStoreExists(storeId);
-        logger.info(String.format("edit product price %d to %d in store %s", productId, newPrice, getStore(sessionId, storeId).getStoreName()));
+        logger.info(String.format("edit product price %d to %d in store %s", productId, newPrice, getStore(storeId).getStoreName()));
         Position p = checkPositionLegal(sessionId, storeId);
         p.editProductPrice(productId, newPrice);
     }
@@ -449,7 +439,7 @@ public class Market {
         sessionManager.getSession(sessionId);
         logger.info("trying to edit product category");
         checkStoreExists(storeId);
-        logger.info(String.format("edit product category %d to %s in store %s", productId, newCategory, getStore(sessionId, storeId).getStoreName()));
+        logger.info(String.format("edit product category %d to %s in store %s", productId, newCategory, getStore(storeId).getStoreName()));
         Position p = checkPositionLegal(sessionId, storeId);
         p.editProductCategory(productId, newCategory);
     }
@@ -473,7 +463,7 @@ public class Market {
         sessionManager.getSession(sessionId);
         logger.info("trying to remove product from store");
         checkStoreExists(storeId);
-        logger.info(String.format("removing product %d from %s", productId, getStore(sessionId, storeId)));
+        logger.info(String.format("removing product %d from %s", productId, getStore(storeId)));
         Position p = checkPositionLegal(sessionId, storeId);
         p.removeProductFromStore(productId);
     }
@@ -499,7 +489,7 @@ public class Market {
         Guest g = sessionManager.getSession(sessionId);
         logger.info(String.format("trying to appoint new manager to the store the member %s", MemberToBecomeManager));
         checkStoreExists(storeID);
-        logger.info(String.format("promoting %s to be the manager of %s", MemberToBecomeManager, getStore(sessionId, storeID)));
+        logger.info(String.format("promoting %s to be the manager of %s", MemberToBecomeManager, getStore(storeID)));
         Position p = checkPositionLegal(sessionId, storeID);
         Member m = users.get(MemberToBecomeManager);
         if (m == null) {
@@ -513,7 +503,6 @@ public class Market {
     public void addStoreManagerPermissions(String sessionId, String storeManager, int storeID, int newPermission) throws Exception {
         isMarketOpen();
         logger.info("trying to add manger permissions");
-        Member m = (Member) sessionManager.getSession(sessionId);
         StoreManager.permissionType perm = StoreManager.permissionType.values()[newPermission];
         Position p = checkPositionLegal(sessionId, storeID);
         Position storeManagerPosition = users.get(storeManager).getStorePosition(stores.get(storeID));
@@ -525,7 +514,7 @@ public class Market {
 //            throw new Exception("only the systemManager's assigner can edit his permissions");
 //        }
         else {
-            logger.info(String.format("%s have new permissions %d to %s", storeManager, newPermission, getStore(sessionId, storeID)));
+            logger.info(String.format("%s have new permissions %d to %s", storeManager, newPermission, getStore(storeID)));
             p.addStoreManagerPermissions(storeManagerPosition, perm);
         }
     }
@@ -544,7 +533,7 @@ public class Market {
         } else if (storeManagerPosition.getAssigner().equals(m)) {
             throw new Exception("only the systemManager's assigner can edit his permissions");
         } else {
-            logger.info(String.format("%s have new permissions %d to %s", storeManager, permission, getStore(sessionId, storeID)));
+            logger.info(String.format("%s have new permissions %d to %s", storeManager, permission, getStore(storeID)));
             p.removeStoreManagerPermissions(storeManagerPosition, perm);
         }
     }
@@ -752,7 +741,7 @@ public class Market {
     //PRIVATE METHODS
     public Store getStore(String sessionId, int storeId) throws Exception {
         isMarketOpen();
-        Guest g = sessionManager.getSession(sessionId);
+        sessionManager.getSession(sessionId);
         checkStoreExists(storeId);
         logger.info(String.format("%s get the store with specific storeID : %d", storeId));
         return stores.get(storeId);
@@ -770,7 +759,7 @@ public class Market {
     }
 
     private boolean storeExists(int storeId) {
-        return storeId >= 0 && stores.containsKey(storeId);
+        return storeId < 0 || !stores.containsKey(storeId);
     }
 
     private static boolean stringIsEmpty(String value) {
@@ -778,7 +767,7 @@ public class Market {
     }
 
     private void checkStoreExists(int storeId) throws Exception {
-        if (!storeExists(storeId)) {
+        if (storeExists(storeId)) {
             logger.error(String.format("this store is not exist : %d", storeId));
             throw new Exception("this store is not exist");
         }
@@ -788,7 +777,7 @@ public class Market {
         Guest g = sessionManager.getSession(sessionId);
         Position p = users.get(g.getUsername()).getStorePosition(stores.get(storeId));
         if (p == null) {
-            logger.error(String.format("%s not has a position in %s store", g.getUsername(), getStore(sessionId, storeId).getStoreName()));
+            logger.error(String.format("%s not has a position in %s store", g.getUsername(), getStore(storeId).getStoreName()));
             throw new Exception("Member not has a position in this store");
         }
         return p;
@@ -808,11 +797,11 @@ public class Market {
             throw new Exception("The member's name is not a name of a member");
         }
         if (mToRemove.hasPositions()) { //partial implantation - remove in full one
-            logger.error(String.format("cannot remove member with positions in the market"));
+            logger.error("cannot remove member with positions in the market");
             throw new Exception("cannot remove member with positions in the market");
         }
         if (systemManagers.get(mToRemove.getUsername()) != null) { //partial implantation - remove in full one
-            logger.error(String.format("cannot remove member with positions in the market"));
+            logger.error("cannot remove member with positions in the market");
             throw new Exception("cannot remove member with positions in the market");
         }
         users.remove(memberName);
@@ -844,7 +833,6 @@ public class Market {
             throw new Exception("storeManagerName is not a member");
         }
         checkStoreExists(storeId);
-        Store s = stores.get(storeId);
         Position p = checkPositionLegal(sessionId, storeId);
         p.removeStoreOwner(storeOwnerToRemove, m);
         logger.info(String.format("%s removed from being storeManager", storeOwnerName));
